--- a/package.json
+++ b/package.json
@@ -8,15 +8,25 @@
   "author": "José Silva",
   "license": "MIT",
   "devDependencies": {
-    "ts-loader": "^8.0.18",
-    "typescript": "^4.2.3",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.14",
+    "css-loader": "^6.8.1",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "ts-loader": "^8.4.0",
+    "typescript": "^4.9.5",
     "webpack": "^5.26.3",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3"
+    "axios": "^1.4.0",
+    "postcss-loader": "^7.3.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.3"
   }
 }
